--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "homepage": "https://github.com/marioviana07/just-tech-news#readme",
     "keywords": [],
     "dependencies": {
+        "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "mysql2": "^2.1.0",
         "sequelize": "^6.3.5"
